<resources>
    <string name="app_name">GameSnake</string>
    <string name="start">Start</string>
    <string name="statistics">Statistics</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="score">Score :</string>
    <string name="game_over">Game Over</string>
    <string name="restart">Restart</string>
    <string name="score_0">Score : 0</string>
    <string name="bestscore">BestScore :</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="your_email">Your email</string>
    <string name="your_username">Your username</string>
    <string name="your_password">Your password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign IN</string>
    <string name="best_score">Best Score :</string>
</resources>