<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/snake"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="Snake"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/main_btn_start"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/btn2"
        android:onClick="onClick"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/main_btn_statistics"
        android:layout_width="160dp"
        android:layout_height="63dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/btn2"
        android:onClick="onClick"
        android:textStyle="bold"
        android:text="@string/statistics"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/main_btn_registration"
        android:layout_width="158dp"
        android:layout_height="64dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/btn2"
        android:onClick="onClick"
        android:text="@string/registration"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/main_btn_exit"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="472dp"
        android:background="@drawable/btn2"
        android:onClick="onClick"
        android:textStyle="bold"
        android:text="@string/exit"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>